fix: Fix some of the styling to correct the spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ body {
     margin: 0;
 }
 
+.container {
+    display: flex; 
+    flex-direction: column;
+}
+
 .header {
     display: flex;
     align-items: center;
@@ -22,11 +27,15 @@ ul {
     display: flex;
     padding: 100px;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .hero-section {
-    flex: 1;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin-right: 50px;
+  flex-basis: 400px;
 }
 
 .hero-main {
@@ -57,13 +66,17 @@ ul {
 }
 
 .hero-button {
+    display: block;
     background-color: #3882F6;
     color: #F9FAF8;
     font-size: 21px;
     border-radius: 5px;
-    border-style: solid;
     border-color: #3882F6;
     padding: 10px 30px;
+    text-align: center;
+    width: 150px;
+    border: none;
+    text-decoration: none;
 }
 
 .logo,
@@ -105,8 +118,6 @@ ul {
 .quote-section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-color: #E5E7EB;
     padding: 80px 200px;
 }
@@ -115,12 +126,15 @@ ul {
     font-size: 36px;
     font-style: italic;
     color: #1F2937;
+    font-weight: lighter;
 }
 
 .quote-signature {
-    align-self: flex-end;
     font-weight: bold;
     font-size: 22px;
+    text-align: right;
+    padding-bottom: 20px;
+    padding-right: 10px;
 }
 
 .cta {
